syntax = "proto3";

package checks.v1;

message CheckRequest {
  oneof check {
    string text = 1;
    string image = 2;
  }
}

message CheckResponse {
  bool result = 1;
  string details = 2;
}

service CheckService {
  rpc Check(CheckRequest) returns (CheckResponse) {}
}
